--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
     <li><a href="2.html" target="_blank">일기</a></li>
     <li><a href="3.html" target="_blank">그리고...</a></li>
 </ol>
-<h2>HTML이란 무엇인가?</h2>
+<h2>HTML이란 무엇인가? 수정!!!</h2>
 <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="이것봐봐라">Hypertext Markup Language (HTML)</a>
 Hello world. 저는 라니킴 입니다. 이것은 나의 <u><strong>첫번째</strong></u>  웹페이지, 세상에 던지는 <strong>굵직한 네 번째 도전.</strong> 바안갑다!!!! 코딩을 처음해보고 있는데 생각보다 재밌네요.
 <img src="cod.jpg" width="100%">
